--- a/app/views/antigen/v2/global-registration/antibody-test-confirmation-backup.html
+++ b/app/views/antigen/v2/global-registration/antibody-test-confirmation-backup.html
@@ -67,14 +67,14 @@
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
                     {% if data['delivery-address-person-1'] !== "No" %}
-                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                         {{ data['gp-address'] }}
                       {% else %}
                         {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
                         {{ data['gp-postcode'] or 'LS1 3BE' }}
                       {% endif %}
                     {% else %}
-                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "Select from 5 addresses" %}
                         {{ data['delivery-address-antibody'] }}
                       {% else %}
                         {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
@@ -95,14 +95,14 @@
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
                     {% if data['delivery-address-person-1'] !== "No" %}
-                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                         {{ data['gp-address'] }}
                       {% else %}
                         {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
                         {{ data['gp-postcode'] or 'LS1 3BE' }}
                       {% endif %}
                     {% else %}
-                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "Select from 5 addresses" %}
                         {{ data['delivery-address-antibody'] }}
                       {% else %}
                         {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
@@ -123,14 +123,14 @@
                   <th scope="row" class="govuk-table__header">Delivery address</th>
                   <td class="govuk-table__cell">
                     {% if data['delivery-address-person-1'] !== "No" %}
-                      {% if data['gp-address'] and data['gp-address'] !== "5 addresses found" %}
+                      {% if data['gp-address'] and data['gp-address'] !== "Select from 5 addresses" %}
                         {{ data['gp-address'] }}
                       {% else %}
                         {{ data['address-line-1-gp'] or '5 Souterhead Road'}}<br>
                         {{ data['gp-postcode'] or 'LS1 3BE' }}
                       {% endif %}
                     {% else %}
-                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "5 addresses found" %}
+                      {% if data['delivery-address-antibody'] and data['delivery-address-antibody'] !== "Select from 5 addresses" %}
                         {{ data['delivery-address-antibody'] }}
                       {% else %}
                         {{ data['delivery-address-line-1-antibody'] or '5 Souterhead Road'}}<br>
